Services CSS Fix
- Reduced the whitespace on the services button.
- Added the new Navbar Logo to the images folder.

--- a/src/css/services.css
+++ b/src/css/services.css
@@ -36,7 +36,7 @@
 .services-btn {
   border-radius: 15px;
   display: grid;
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: 2fr 1fr;
   align-items: center;
   justify-content: center;
   background-color: #f7f7f7;
@@ -65,6 +65,7 @@
   text-align: center;
   padding: 0 10px;
   color: var(--dark);
+  top: 10px;
 }
 
 .services-btn i {
@@ -112,6 +113,7 @@
 
   .services-btn {
     min-height: 120px;
+    grid-template-rows: 1.5fr 1fr;
   }
 
   .services-btn i {
